...
    
    func configureNavigationBar() {
        navigationController?.navigationBar.tintColor = .white
        navigationController?.navigationBar.isTranslucent = false
        navigationController?.navigationBar.barStyle = .black
        navigationController?.navigationBar.barTintColor = UIColor(red: 103/255, green: 150/255, blue: 190/255, alpha: 1)
        navigationItem.title = "Min Profil"
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Rediger", style: .plain, target: self, action: #selector(editUser))
        
    }
    
    @objc func editUser() {
        let editProfileViewController = EditProfileViewController()
        editProfileViewController.view.backgroundColor = UIColor(red: 103/255, green: 150/255, blue: 190/255, alpha: 1)
...
