...
        label.text = "Om mig"
        return label
    }()
    
    let descriptionTextField: UITextField = {
        let sampleTextField =  UITextField()
        sampleTextField.placeholder = "Skriv din beskrivelse her"
        sampleTextField.tintColor = .white
        sampleTextField.font = UIFont.systemFont(ofSize: 16)
        sampleTextField.borderStyle = UITextField.BorderStyle.roundedRect
        sampleTextField.backgroundColor = .clear
        sampleTextField.textColor = .white
        sampleTextField.returnKeyType = UIReturnKeyType.default
...
        return picker
    }()
    
    let editProfileButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Rediger Profil", for: .normal)
        button.setTitleColor(UIColor(red: 103/255, green: 150/255, blue: 190/255, alpha: 1), for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 18)
        button.layer.cornerRadius = 20
        button.backgroundColor = .white
        return button
    }()
...
