...
                                </connections>
                            </button>
                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LsQ-k1-6cK">
                                <rect key="frame" x="0.0" y="813" width="414" height="83"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <tabBarItem title="Hjem" image="house.fill" catalog="system" id="bEG-l5-6qa"/>
                                    <tabBarItem tag="1" title="Tip" image="message.fill" catalog="system" id="ba9-cq-bbd"/>
                                    <tabBarItem tag="2" title="P-Vagt" image="exclamationmark.triangle.fill" catalog="system" id="YR4-qh-U7d"/>
                                    <tabBarItem tag="3" title="Menu" image="circle.grid.3x3.fill" catalog="system" id="tzm-fr-PLx"/>
                                </items>
                            </tabBar>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <gestureRecognizers/>
                        <constraints>
...
