...
            <objects>
                <viewController storyboardIdentifier="Sign" id="eyf-yw-fWI" customClass="SignViewController" customModule="Papp_iOS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pNl-kZ-tnH">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="test@test.dk" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XpI-Zv-4OM">
                                <rect key="frame" x="30" y="305" width="354" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="M2g-DI-OK7"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="tester" borderStyle="roundedRect" placeholder="Adgangskode" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KFD-qr-w33">
                                <rect key="frame" x="30" y="410" width="354" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="X3k-15-wNb"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EbY-lr-Z0q">
                                <rect key="frame" x="30" y="519" width="354" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="FuB-V5-npR"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="14"/>
                                <state key="normal" title="Log På">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="login" destination="eyf-yw-fWI" eventType="touchUpInside" id="AQG-gT-xEB"/>
                                </connections>
                            </button>
...
